added seo content and metatags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>tripyy tales - Jim Corbett, Nainital & Uttarakhand Tours</title>
-  </head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Primary SEO -->
+  <title>Tripyy Tales – Jim Corbett Safari, Uttarakhand Treks, Nainital Tours & Resorts</title>
+  <meta name="description" content="Tripyy Tales offers Jim Corbett Safari booking, Nainital tour packages, Uttarakhand trekking trips, resort stays, adventure tours and complete travel assistance." />
+  <meta name="keywords" content="Tripyy Tales, Jim Corbett Safari, Nainital tour, Uttarakhand trekking, Chopta trek, Nag Tibba trek, adventure tours, resort booking Ramnagar" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://www.tripyytales.com/" />
+
+  <!-- OpenGraph (Facebook, Instagram, WhatsApp Preview) -->
+  <meta property="og:title" content="Tripyy Tales – Jim Corbett Safari & Uttarakhand Tours" />
+  <meta property="og:description" content="Book Corbett Safari, Nainital tour packages, Chopta treks and luxury resort stays with Tripyy Tales." />
+  <meta property="og:url" content="https://www.tripyytales.com/" />
+  <meta property="og:site_name" content="Tripyy Tales" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://i.pinimg.com/1200x/65/cb/aa/65cbaa1f528cb47ee2eeb180bccc42aa.jpg" />
+
+  <!-- Twitter / X Meta -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Tripyy Tales – Uttarakhand Safari & Trekking Tours" />
+  <meta name="twitter:description" content="Jim Corbett Safari · Nainital Packages · Chopta Treks · Resort Booking" />
+  <meta name="twitter:image" content="https://i.pinimg.com/1200x/65/cb/aa/65cbaa1f528cb47ee2eeb180bccc42aa.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon.png" />
+
+  <!-- Schema.org Structured Data (Google Rich Results) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "TravelAgency",
+    "name": "Tripyy Tales",
+    "url": "https://www.tripyytales.com/",
+    "logo": "https://www.tripyytales.com/logo.png",
+    "description": "Tripyy Tales offers Jim Corbett Safari booking, Nainital tour packages, Uttarakhand trekking, Chopta treks, luxury resorts and travel planning.",
+    "telephone": "+919027070879",
+    "sameAs": [
+      "https://www.instagram.com/tripyytales",
+      "https://www.facebook.com/tripyytales"
+    ],
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Ramnagar",
+      "addressRegion": "Uttarakhand",
+      "addressCountry": "India"
+    }
+  }
+  </script>
+</head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
