--- a/index.html
+++ b/index.html
@@ -1,57 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Primary SEO -->
-  <title>Tripyy Tales – Jim Corbett Safari, Uttarakhand Treks, Nainital Tours & Resorts</title>
-  <meta name="description" content="Tripyy Tales offers Jim Corbett Safari booking, Nainital tour packages, Uttarakhand trekking trips, resort stays, adventure tours and complete travel assistance." />
-  <meta name="keywords" content="Tripyy Tales, Jim Corbett Safari, Nainital tour, Uttarakhand trekking, Chopta trek, Nag Tibba trek, adventure tours, resort booking Ramnagar" />
+    <!-- ===== Primary SEO (Fallback, Helmet will override) ===== -->
+    <title>Tripyy Tales – Jim Corbett Safari, Uttarakhand Treks & Tours</title>
+    <meta
+      name="description"
+      content="Tripyy Tales offers Jim Corbett Safari booking, Nainital tour packages, Uttarakhand trekking trips, resort stays, adventure tours and complete travel assistance."
+    />
 
-  <!-- Canonical URL -->
-  <link rel="canonical" href="https://www.tripyytales.com/" />
+    <!-- Keywords (Optional but okay) -->
+    <meta
+      name="keywords"
+      content="Tripyy Tales, Jim Corbett Safari, Nainital tour, Uttarakhand trekking, Chopta trek, Nag Tibba trek, adventure tours, resort booking Ramnagar"
+    />
 
-  <!-- OpenGraph (Facebook, Instagram, WhatsApp Preview) -->
-  <meta property="og:title" content="Tripyy Tales – Jim Corbett Safari & Uttarakhand Tours" />
-  <meta property="og:description" content="Book Corbett Safari, Nainital tour packages, Chopta treks and luxury resort stays with Tripyy Tales." />
-  <meta property="og:url" content="https://www.tripyytales.com/" />
-  <meta property="og:site_name" content="Tripyy Tales" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://i.pinimg.com/1200x/65/cb/aa/65cbaa1f528cb47ee2eeb180bccc42aa.jpg" />
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.tripyytales.com/" />
 
-  <!-- Twitter / X Meta -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Tripyy Tales – Uttarakhand Safari & Trekking Tours" />
-  <meta name="twitter:description" content="Jim Corbett Safari · Nainital Packages · Chopta Treks · Resort Booking" />
-  <meta name="twitter:image" content="https://i.pinimg.com/1200x/65/cb/aa/65cbaa1f528cb47ee2eeb180bccc42aa.jpg" />
+    <!-- ===== Open Graph – Mandatory for Social Sharing ===== -->
+    <meta property="og:title" content="Tripyy Tales – Jim Corbett Safari & Uttarakhand Tours" />
+    <meta
+      property="og:description"
+      content="Book Corbett Safari, Nainital tour packages, Chopta treks and luxury resort stays with Tripyy Tales."
+    />
+    <meta property="og:url" content="https://www.tripyytales.com/" />
+    <meta property="og:site_name" content="Tripyy Tales" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://i.pinimg.com/1200x/65/cb/aa/65cbaa1f528cb47ee2eeb180bccc42aa.jpg"
+    />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="/favicon.png" />
+    <!-- ===== Twitter / X Card ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tripyy Tales – Uttarakhand Safari & Trekking Tours" />
+    <meta name="twitter:description" content="Jim Corbett Safari · Nainital Packages · Chopta Treks · Luxury Resorts" />
+    <meta
+      name="twitter:image"
+      content="https://i.pinimg.com/1200x/65/cb/aa/65cbaa1f528cb47ee2eeb180bccc42aa.jpg"
+    />
 
-  <!-- Schema.org Structured Data (Google Rich Results) -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "TravelAgency",
-    "name": "Tripyy Tales",
-    "url": "https://www.tripyytales.com/",
-    "logo": "https://www.tripyytales.com/logo.png",
-    "description": "Tripyy Tales offers Jim Corbett Safari booking, Nainital tour packages, Uttarakhand trekking, Chopta treks, luxury resorts and travel planning.",
-    "telephone": "+919027070879",
-    "sameAs": [
-      "https://www.instagram.com/tripyytales",
-      "https://www.facebook.com/tripyytales"
-    ],
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Ramnagar",
-      "addressRegion": "Uttarakhand",
-      "addressCountry": "India"
-    }
-  }
-  </script>
-</head>
+    <!-- ===== Favicon ===== -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
+    <!-- ===== Schema.org JSON-LD for Google ===== -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "TravelAgency",
+        "name": "Tripyy Tales",
+        "url": "https://www.tripyytales.com/",
+        "logo": "https://www.tripyytales.com/logo.png",
+        "description": "Tripyy Tales offers Jim Corbett Safari booking, Nainital tour packages, Uttarakhand trekking, Chopta treks, luxury resorts and travel planning.",
+        "telephone": "+919027070879",
+        "sameAs": [
+          "https://www.instagram.com/tripyytales",
+          "https://www.facebook.com/tripyytales"
+        ],
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Ramnagar",
+          "addressRegion": "Uttarakhand",
+          "addressCountry": "IN"
+        }
+      }
+    </script>
+
+  </head>
 
   <body>
     <div id="root"></div>
